# todo

./: .gitignore  Makefile  README.md  assessment-context.md  metadata.txt  pyproject.toml
.github/workflows/: CI.yml
chats/: cursor_analyze_and_assess_repository_re.md  cursor_automate_dev_tasks_with_makefile.md  cursor_fill_out_project_spec_details.md  cursor_fix_zsh_lines_90_102.md  cursor_generate_project_proposal_with_o.md  cursor_implement_openspec_project_md_pr.md  cursor_proposal_for_optional_assessment.md
openspec/: project.md
openspec/changes/archive/2025-12-09-complete-assessment-requirements/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-09-complete-assessment-requirements/specs/ci/: spec.md
openspec/changes/archive/2025-12-09-complete-assessment-requirements/specs/documentation/: spec.md
openspec/changes/archive/2025-12-09-complete-assessment-requirements/specs/ui/: spec.md
openspec/changes/archive/2025-12-09-implement-optional-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-09-implement-optional-features/specs/core/: spec.md
openspec/changes/archive/2025-12-09-init-todo-project/: proposal.md  tasks.md
openspec/changes/init-todo-project/: design.md  tasks.md
openspec/changes/init-todo-project/specs/core/: spec.md
openspec/specs/ci/: spec.md
openspec/specs/core/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/ui/: spec.md
src/todo/: app.py  db.py  models.py  nlp.py  repository.py
tests/: test_db.py  test_models.py  test_nlp.py
(+1 files in other folders)
