[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rubens", email = "38709237+andrader@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = ["dateparser>=1.2.0", "pydantic>=2.12.5", "streamlit>=1.52.1"]

[project.scripts]
todo = "todo:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "watchdog>=6.0.0",
]
